--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-webpage",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://zhilyasov.github.io/Portfolio",
   "dependencies": {
     "@tabler/icons-react": "^2.44.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -19,9 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
